force-app/main/default/objects/QuotationLine__c/QuotationLine__c.object-meta.xml
<CustomObject>
    <description>freee quotation line items for creating estimates.</description>
    <label>見積明細</label>
    <nameField>
        <displayFormat>QTL-{000000}</displayFormat>
        <label>見積明細番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>