force-app/main/default/objects/QuotationLine__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>明細名</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>