force-app/main/default/objects/QuotationLine__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>見積明細</relationshipLabel>
    <relationshipName>product2_1</relationshipName>
    <type>Lookup</type>
</CustomField>