force-app/main/default/objects/QuotationLine__c/fields/ProductMaster__c.field-meta.xml
<CustomField>
    <fullName>ProductMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商品マスタ</label>
    <referenceTo>ProductMaster__c</referenceTo>
    <relationshipLabel>見積明細</relationshipLabel>
    <relationshipName>QuotationLines</relationshipName>
    <type>Lookup</type>
</CustomField>