force-app/main/default/objects/QuotationLine__c/fields/Quotation__c.field-meta.xml
<CustomField>
    <fullName>Quotation__c</fullName>
    <label>親見積書</label>
    <referenceTo>Quotation__c</referenceTo>
    <relationshipLabel>見積明細</relationshipLabel>
    <relationshipName>QuotationLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>