force-app/main/default/objects/QuotationLine__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quotation__c</columns>
    <columns>Description__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unit_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべての見積明細</label>
</ListView>